More tweaks to fix issue of hover highlight on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -263,6 +263,13 @@ body {
     /* Ensure no default hover colour */
 }
 
+@media (hover: hover) and (pointer: fine) {
+    .cell:hover {
+        background-color: transparent;
+        /* Optional, only apply hover styles on non-touch devices */
+    }
+}
+
 /* Modal container */
 .modal {
     position: fixed;
